# intersection_ECDG

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
Experiments/: batch_result1.txt  batch_result2.txt  plot_result.py
batch_test/: CMakeLists.txt  batch_test_cdg_scheduler_bruteforce.cpp  batch_test_cdg_scheduler_compare_v1.cpp  batch_test_cdg_scheduler_compare_v2.cpp  batch_test_scheduler_v10.cpp  batch_test_scheduler_v100.cpp  batch_test_scheduler_v12.cpp  batch_test_scheduler_v14.cpp  batch_test_scheduler_v15.cpp  batch_test_scheduler_v200.cpp  batch_test_scheduler_v5.cpp  batch_test_scheduler_v50.cpp  batch_test_scheduler_v5_nopre.cpp
configs/: config.yaml
configs/sumo_intersection/: intersection.edg.xml  intersection.net.xml  intersection_unregulated.sumocfg
configs/sumo_intersection0/: intersection.nod.xml  intersection.sumocfg
configs/sumo_intersection1/: intersection.con.xml  intersection.rou.xml  intersection_unregulated.net.xml
configs/sumo_intersection2/: intersection.edg.xml
include/: batch_test_utility.h  cdg_conflict_spanning_tree.h  cdg_scheduler.h  conflict_directed_graph.h  conflict_spanning_tree.h  graph_utility.h  intersection.h  intersection_utility.h  parameters.h  scheduler.h  spanning_tree.h  sumo_batch_utility.h  sumo_local_vehicle.h  sumo_sim_utility.h  sumo_simulator.h  time_utility.h
include/time_profiler/: time_profiler.h
log/: 202209231030.txt  202209231425.txt  202209281130_100node_w2_w5.txt  202209281130_5node_w2_w5.txt  backupresults.sh
log/old_numerical_sim/: 202209231425.txt
scripts/: Arc_multi_sumo_sim.sh  multi_sumo_sim.sh
src/: batch_test_utility.cpp  cdg_conflict_spanning_tree.cpp  cdg_main.cpp  cdg_scheduler.cpp  config.yaml  conflict_directed_graph.cpp  conflict_spanning_tree.cpp  graph_utility.cpp  intersection.cpp  intersection_utility.cpp  main.cpp  parameters.cpp  scheduler.cpp  spanning_tree.cpp  sumo_batch_utility.cpp  sumo_local_vehicle.cpp  sumo_sim_utility.cpp  sumo_simulator.cpp  time_utility.cpp
sumo_sim/: CMakeLists.txt  sumo_sim_batch.cpp  sumo_sim_batch_v100_interval1.cpp  sumo_sim_batch_v100_interval2.cpp  sumo_sim_batch_v10_interval1.cpp  sumo_sim_batch_v10_interval2.cpp  sumo_sim_one_case.cpp  sumo_sim_v5.cpp
test/: CMakeLists.txt  batch_scheduler_test.cpp  batch_scheduler_v100_test.cpp  batch_scheduler_v10_test.cpp  batch_scheduler_v5_nopre_test.cpp  batch_scheduler_v5_test.cpp  cdg_scheduler_bruteforce_test.cpp  cdg_scheduler_compare_v1_test.cpp  cdg_scheduler_compare_v2_test.cpp  conflict_spanning_tree_test.cpp  graph_utility_test.cpp  intersection_test.cpp  intersection_utility_test.cpp  main.cpp  main_cdg.cpp  main_numerical_exp.cpp  scheduler_bruteforce_test.cpp  scheduler_compare_v1_test.cpp  scheduler_compare_v2_test.cpp  scheduler_multiweight_v2_test.cpp  scheduler_multiweight_v3_test.cpp  scheduler_test.cpp  spanning_tree_test.cpp
